--- a/index.html
+++ b/index.html
@@ -26,27 +26,62 @@
                   <option value="">Font Name</option>
                 </select>
               </div>
-              <div class="font-size">
-                <input type="number" value="15" id="" />
-                <span>A+</span>
-                <span>A-</span>
+              <div class="font-size ms-2">
+                <input type="number" value="20" id="fontsize" />
+                <button
+                  id="sizeincrement"
+                  class="bg-secondary p-1 rounded text-white ms-2"
+                >
+                  A <sup>+</sup>
+                </button>
+                <button
+                  id="sizedecriment"
+                  class="bg-secondary p-1 rounded text-white ms-2"
+                >
+                  A <sup>-</sup>
+                </button>
               </div>
             </div>
 
             <div class="d-flex">
               <div class="font-weight">
-                <i class="fa-solid fa-bold"></i>
-                <i class="fa-solid fa-italic"></i>
-                <i class="fa-solid fa-underline"></i>
-                <i class="fa-solid fa-underline"></i>
-                <i class="fa-solid fa-strikethrough"></i>
+                <button class="bg-secondary p-1 rounded text-white ms-2">
+                  e <i class="fa-solid fa-bold"></i>
+                </button>
+                <button class="bg-secondary p-1 rounded text-white ms-2">
+                  e <i class="fa-solid fa-italic"></i>
+                </button>
+                <button class="bg-secondary p-1 rounded text-white ms-2">
+                  e
+                  <i class="fa-solid fa-underline"></i>
+                </button>
+                <button class="bg-secondary p-1 rounded text-white ms-2">
+                  e
+                  <i class="fa-solid fa-underline"></i>
+                </button>
+                <button class="bg-secondary p-1 rounded text-white ms-2">
+                  e
+                  <i class="fa-solid fa-strikethrough"></i>
+                </button>
               </div>
             </div>
             <div class="d-flex">
-              <i class="fa-solid fa-align-left"></i>
-              <i class="fa-solid fa-align-center"></i>
-              <i class="fa-solid fa-align-right"></i>
-              <i class="fa-solid fa-align-justify"></i>
+              <button class="bg-secondary p-1 rounded text-white ms-2">
+                l
+                <i class="fa-solid fa-align-left"></i>
+              </button>
+              <button class="bg-secondary p-1 rounded text-white ms-2">
+                c
+                <i class="fa-solid fa-align-center"></i>
+              </button>
+              <button class="bg-secondary p-1 rounded text-white ms-2">
+                r
+                <i class="fa-solid fa-align-right"></i>
+              </button>
+              <button class="bg-secondary p-1 rounded text-white ms-2">
+                j
+                <i class="fa-solid fa-align-justify"></i>
+              </button>
             </div>
             <div class="d-flex">
               <div class="d-flex">
@@ -61,7 +96,10 @@
           </div>
         </div>
         <div class="card-body">
-          <textarea placeholder="Enter your text here..."></textarea>
+          <textarea
+            id="textarea"
+            placeholder="Enter your text here..."
+          ></textarea>
         </div>
         <div class="card-footer">
           <div class="output d-flex justify-content-around">
@@ -74,10 +112,10 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/4e3bd9b7a2.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script src="src/script.js"></script>
   </body>
 </html>
