--- a/index.html
+++ b/index.html
@@ -46,40 +46,33 @@
             <div class="d-flex">
               <div class="font-weight">
                 <button class="bg-secondary p-1 rounded text-white ms-2">
-                  e <i class="fa-solid fa-bold"></i>
+                  <i class="fa-solid fa-bold"></i>
                 </button>
                 <button class="bg-secondary p-1 rounded text-white ms-2">
-                  e <i class="fa-solid fa-italic"></i>
+                  <i class="fa-solid fa-italic"></i>
                 </button>
                 <button class="bg-secondary p-1 rounded text-white ms-2">
-                  e
                   <i class="fa-solid fa-underline"></i>
                 </button>
                 <button class="bg-secondary p-1 rounded text-white ms-2">
-                  e
                   <i class="fa-solid fa-underline"></i>
                 </button>
                 <button class="bg-secondary p-1 rounded text-white ms-2">
-                  e
                   <i class="fa-solid fa-strikethrough"></i>
                 </button>
               </div>
             </div>
             <div class="d-flex">
               <button class="bg-secondary p-1 rounded text-white ms-2">
-                l
                 <i class="fa-solid fa-align-left"></i>
               </button>
               <button class="bg-secondary p-1 rounded text-white ms-2">
-                c
                 <i class="fa-solid fa-align-center"></i>
               </button>
               <button class="bg-secondary p-1 rounded text-white ms-2">
-                r
                 <i class="fa-solid fa-align-right"></i>
               </button>
               <button class="bg-secondary p-1 rounded text-white ms-2">
-                j
                 <i class="fa-solid fa-align-justify"></i>
               </button>
             </div>
@@ -96,10 +89,9 @@
           </div>
         </div>
         <div class="card-body">
-          <textarea
-            id="textarea"
-            placeholder="Enter your text here..."
-          ></textarea>
+          <textarea id="textarea" placeholder="Enter your text here...">
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur cumque accusamus, provident vitae quas sed repudiandae exercitationem enim, ratione distinctio magnam animi! Architecto reprehenderit quisquam voluptatem aut id odit suscipit?</textarea
+          >
         </div>
         <div class="card-footer">
           <div class="output d-flex justify-content-around">
@@ -112,10 +104,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script
-      src="https://kit.fontawesome.com/4e3bd9b7a2.js"
-      crossorigin="anonymous"
-    ></script> -->
+    <script src="src/kit.fontawesome.com_4e3bd9b7a2.js"></script>
     <script src="src/script.js"></script>
   </body>
 </html>
